# qp

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  qp-bench.yml  qp-postgres.yml  qp.yml
examples/postgres-axum/: Cargo.toml
examples/postgres-axum/src/: main.rs
examples/postgres-hyper/: Cargo.toml
examples/postgres-hyper/src/: main.rs
qp/: Cargo.toml  README.md
qp-bench/: Cargo.toml
qp-bench/benches/: bench_main.rs
qp-bench/benches/async_pool/: bb8.rs  deadpool.rs  mobc.rs  mod.rs  qp.rs
qp-bench/benches/core/: bb8.rs  deadpool.rs  mobc.rs  mod.rs  qp.rs  r2d2.rs
qp-bench/benches/postgres/: bb8.rs  deadpool.rs  mobc.rs  mod.rs  qp.rs  r2d2.rs  sqlx.rs
qp-postgres/: Cargo.toml  LICENSE  README.md  docker-compose.yml
qp-postgres/examples/: readme.rs
qp-postgres/examples/axum/: Cargo.toml
qp-postgres/examples/axum/src/: main.rs
qp-postgres/src/: lib.rs
qp-postgres/tests/: pool.rs
qp/examples/: int_pool.rs  readme.rs
qp/src/: error.rs  lib.rs  pool.rs  resource.rs  sync.rs
qp/tests/: counter.rs
src/: error.rs  lib.rs
