[package]
name = "qp-bench"
version = "1.0.0"
edition = "2021"

[dependencies]
bb8 = "0.7.1"
criterion = { version = "0.3.5", features = ["async_tokio"] }
deadpool = "0.9.2"
mobc = "0.7.3"
qp = { path = "../qp" }
tokio = { version = "1.14.0", features = ["full"] }

[[bench]]
name = "bench_main"
harness = false
