[package]
name = "qp-bench"
version = "0.1.0"
authors = ["Seungjae Park <astro.psj@gmail.com>"]
edition = "2021"
rust-version = "1.56"
description = "Rust Async Resource Pool Benchmark"
documentation = "https://docs.rs/qp-bench"
repository = "https://github.com/Astro36/qp"
license = "MIT"
keywords = ["async", "resource", "pool", "tokio", "benchmark"]
categories = ["asynchronous", "data-structures"]
publish = false

[dependencies]
async-trait = "0.1.51"
bb8 = "0.7.1"
bb8-postgres = "0.7.0"
criterion = { version = "0.3.5", features = ["async_tokio"] }
deadpool = "0.9.2"
deadpool-postgres = "0.10.1"
futures = "0.3.18"
mobc = "0.7.3"
mobc-postgres = "0.7.0"
qp = { path = "../qp", version = "0.1.0" }
qp-postgres = { path = "../qp-postgres", version = "0.1.0" }
r2d2 = "0.8.9"
r2d2_postgres = "0.18.1"
tokio = { version = "1.14.0", features = ["full"] }
tokio-postgres = "0.7.5"

[[bench]]
name = "bench_main"
harness = false
