[package]
name = "qp-postgres"
version = "0.1.0"
authors = ["Seungjae Park <astro.psj@gmail.com>"]
edition = "2021"
rust-version = "1.56"
description = "Quick Pool: High Performance Rust Async Resource Pool PostgreSQL Adapter"
repository = "https://github.com/Astro36/qp"
license = "MIT"
keywords = ["async", "database", "pool", "tokio", "postgres"]
categories = ["asynchronous", "database", "data-structures"]

[dependencies]
qp = { path = "../qp", version = "0.1.0" }
tokio = { version = "1.14.0", features = ["rt"] }
tokio-postgres = "0.7.5"

[dev-dependencies]
tokio = { version = "1.14.0", features = ["macros", "rt", "rt-multi-thread"] }
