[package]
name = "qp-postgres"
version = "0.1.2"
authors = ["Seungjae Park <astro.psj@gmail.com>"]
edition = "2021"
rust-version = "1.56"
description = "Quick Pool: High Performance Async Generic Pool PostgreSQL Adapter"
repository = "https://github.com/Astro36/qp"
license = "MIT"
keywords = ["async", "database", "pool", "tokio", "postgres"]
categories = ["asynchronous", "database", "data-structures"]

[dependencies]
qp = { path = "../qp", version = "0.2.1" }
tokio = { version = "1.19.2", features = ["rt"] }
tokio-postgres = "0.7.6"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["macros", "rt", "rt-multi-thread"] }
