[package]
name = "qp"
version = "0.1.2"
authors = ["Seungjae Park <astro.psj@gmail.com>"]
edition = "2021"
rust-version = "1.56"
description = "Quick Pool: High Performance Rust Async Resource Pool"
repository = "https://github.com/Astro36/qp"
license = "MIT"
keywords = ["async", "resource", "pool", "tokio"]
categories = ["asynchronous", "data-structures"]

[dependencies]
async-trait = "0.1.51"
crossbeam-queue = "0.3.2"
crossbeam-utils = "0.8.5"
futures-lite = "1.12.0"
thiserror = "1.0.30"

[dev-dependencies]
tokio = { version = "1.14.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
