[package]
name = "qp-postgres-axum-example"
version = "0.1.0"
authors = ["Seungjae Park <astro.psj@gmail.com>"]
edition = "2021"
rust-version = "1.56"
description = "Quick Pool: High Performance Async Generic Pool PostgreSQL Adapter Axum Example"
repository = "https://github.com/Astro36/qp"
license = "MIT"
keywords = ["async", "database", "pool", "axum", "postgres"]
categories = ["asynchronous", "database", "data-structures", "network-programming", "web-programming::http-server"]
publish = false

[dependencies]
axum = "0.5.7"
qp-postgres = { path = "../../qp-postgres", version = "0.1.0" }
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
