[package]
name = "qp-postgres-axum-example"
version = "0.1.0"
authors = ["Seungjae Park <astro.psj@gmail.com>"]
edition = "2021"
rust-version = "1.56"
description = "Rust Async Resource Pool PostgreSQL Adapter Axum Example"
repository = "https://github.com/Astro36/qp"
license = "MIT"
keywords = ["async", "database", "pool", "axum", "postgres"]
categories = ["asynchronous", "database", "data-structures", "network-programming", "web-programming::http-server"]
publish = false

[dependencies]
axum = "0.3.4"
serde = { version = "1.0.130", features = ["derive"] }
qp-postgres = { path = "../../", version = "0.1.0" }
tokio = { version = "1.14.0", features = ["full"] }

[workspace]
